tests/baselines/reference/crashOnMethodSignatures.errors.txt
==== tests/cases/compiler/crashOnMethodSignatures.ts (1 errors) ====
    class A {
        a(completed: () => any): void;
        ~
!!! error TS1041: Function implementation expected.
    }
    